# copilot-python

./: README.md  auth.py  copilot.py  env.example  main.py  pyproject.toml  server.py
